Fixing figure img tags and adding two new events

--- a/index.html
+++ b/index.html
@@ -135,11 +135,38 @@
       <div class="container eve">
         <article class="event">
           <figure class="event-image-container">
-            <img class="event-image" src="images/portfolio-images/wawalaptop.jpg" width="500" alt="foto en el colegio Telésforo Catacora"/>
+            <img class="event-image first" src="images/portfolio-images/laboratoria-js-ES6.jpg" width="500" alt="foto del taller de JS en Laboratoria"/>
           </figure>
           <div class="event-detail">
-            <h3 class="event-title">Desarrollo Web - Taller</h3>
-            <p class="event-description">Este fue un taller dividido en 6 sesiones. El cual tuvo como objetivo enseñar a todos los 
+            <h3 class="event-title">JavaScript ES6</h3>
+            <p class="event-description">
+              A inicios del 2020 tuve la oportunidad de dictar un taller con la comunidad de Lima Frontend. 
+              El programa pertenece a Talleres Dev y en el mes de enero se dio en las instalaciones de Laboratoria.
+            </p>
+            <a class="event-url" href="https://www.facebook.com/talleresdev/" target="blank">Página de Facebook</a>
+          </div>
+        </article>
+        <article class="event">
+          <figure class="event-image-container">
+            <img class="event-image second" src="images/portfolio-images/team-blockchain.jpg" width="500" alt="foto del taller de JS en Laboratoria"/>
+          </figure>
+          <div class="event-detail">
+            <h3 class="event-title">Blockchain Hackathon</h3>
+            <p class="event-description">
+              A finales del 2019 tuve la oportunidad de participar en mi primera Hackatón junto a dos amigos más.
+              Fue organizado por HackLatam y finalmente después de un arduo trabajo en la amanecida pudimos obtener el primer lugar.
+            </p>
+            <a class="event-url" href="https://twitter.com/HackLatAm" target="blank">Twitter</a>
+          </div>
+        </article>
+        <article class="event">
+          <figure class="event-image-container">
+            <img class="event-image third" src="images/portfolio-images/wawalaptop.jpg" width="500" alt="foto en el colegio Telésforo Catacora"/>
+          </figure>
+          <div class="event-detail">
+            <h3 class="event-title">Desarrollo Web</h3>
+            <p class="event-description">
+              Este fue un taller dividido en 6 sesiones. El cual tuvo como objetivo enseñar a todos los 
               alumnos, de 5to de secundaria del colegio Telésforo Catacora, a desarrollar una web desde cero con HTML, CSS y Javascript.
             </p>
             <!-- <a class="event-url" href="https://github.com/percymeneses08" target="blank">Ver proyecto</a> -->
@@ -147,17 +174,18 @@
         </article>
         <article class="event">
           <figure class="event-image-container">
-            <img class="event-image" src="images/portfolio-images/github-hackspace.jpg" width="500" alt="foto de la i/o extended 2018"/>
+            <img class="event-image fourth" src="images/portfolio-images/github-hackspace.jpg" width="500" alt="foto de la i/o extended 2018"/>
           </figure>
           <div class="event-detail">
             <h3 class="event-title">Git y GitHub</h3>
-            <p class="event-description">Realicé esta charla porque varios de mis compañeros tenían muchas ganas de usar Git y GitHub,
+            <p class="event-description">
+              Realicé esta charla porque varios de mis compañeros tenían muchas ganas de usar Git y GitHub,
               pero no sabían cómo. Entonces me propuse a enseñarles lo fundamental para que empezaran con sus propios proyectos.
             </p>
             <a class="event-url" href="https://github.com/percymeneses08" target="blank">Visitar mi GitHub</a>
           </div>
         </article>
-        <article class="event">
+        <!-- <article class="event">
           <figure class="event-image-container">
             <img class="event-image" src="images/portfolio-images/lima-frontend.jpg" width="500" alt="foto de la i/o extended 2018"/>
           </figure>
@@ -168,21 +196,7 @@
             </p>
             <a class="event-url" href="https://www.facebook.com/limafrontend/" target="blank">Quiero unirme</a>
           </div>
-        </article>
-        <article class="event">
-          <figure class="event-image-container">
-            <img class="event-image" src="images/portfolio-images/dev-fest-18.jpg" width="500" alt="foto de la i/o extended 2018"/>
-          </figure>
-          <div class="event-detail">
-            <h3 class="event-title">Dev-fest Lima 18</h3>
-            <p class="event-description">
-              GDG DevFest Lima es un evento organizado por el GDG Open. 
-              Este 2018 reunieron a los mejores en Internet Of Things (IOT), Artificial Intelligence (AI) 
-              y Cyber Security; en dos días llenos de sesiones, talleres y exhibiciones.
-            </p>
-            <a class="event-url" href="https://www.youtube.com/watch?v=TAS1Cl2WfOc" target="_blank">De qué trata</a>
-          </div>
-        </article> 
+        </article> -->
       </div>
     </section>
     <!-- <section class="certificates" id="certificados">
