--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       </section>
     </section>
     <section class="contact" id="contacto">
-      <div class="container width">
+      <div class="container width center">
           <div class="social">
             <a href="https://facebook.com/percymeneses08" class="social-link facebook"></a>
             <a href="https://instagram.com/percymeneses08" class="social-link instagram"></a>
@@ -255,7 +255,7 @@
         <div>
           <p class="developer">Developed by Percy Meneses Luyo with <strong>❤</strong></p>
         </div>
-        <div>2019</div>
+        <div>2020</div>
       </div>
     </footer>
     <div class="bottom-menu">
