--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
     <section class="portfolio" id="portafolio">
       <div class="container portfolio">
         <h2 class="project-title">Proyectos (Destacados)</h2>
+        <article class="project Hackspace-badge">
+          <div class="project-details">
+          <h3 class="project-title">Hackspace Badges</h3>
+          <h6 class="project-course">HTML / CSS / JS / ReactJs / React Router</h6>
+          <p class="project-date"><small><strong>Fecha:</strong> 01/11/19</small></p>
+          <p class="project-url"><small><strong>Puedes ver el código en: </strong><a href="https://github.com/percymeneses08/hackspace-files">https://github.com/percymeneses08/hackspace-files</a></small></p>
+          <p class="project-description">
+            En este proyecto puedes crear tu badge con tus datos, para que cuando otras personas te busquen sea mucho más rápido pues,
+            el cuadro de búsqueda también filtra los resultados. Por el momento no está desplegado por falta de tiempo.
+          </p>
+          </div>
+          <figure class="project-image-container">
+            <img class="project-image hackspace-badge" src="images/hackspace-badge//hackspaceBadge-web.png" width="475" alt="captura de pantalla del proyecto en equipo"/>
+          </figure>
+        </article>
         <article class="project Invie">
           <div class="project-details">
           <h3 class="project-title">Guitarras Invie</h3>
@@ -94,20 +109,6 @@
           </div>
           <figure class="project-image-container">
             <img class="project-image platzi-video" src="images/platzi-video-images/platzi-video-page.png" width="475" alt="captura de pantalla de mi proyecto de PlatziVideo"/>
-          </figure>
-        </article>
-        <article class="project">
-          <div class="project-details">
-          <h3 class="project-title">Movie.es</h3>
-          <h6 class="project-course">HTML / CSS / JS</h6>
-          <p class="project-date"><small><strong>Fecha:</strong> 27/02/19</small></p>
-          <p class="project-url"><small><strong>Míralo clickeando en el siguiente enlace: </strong><a href="https://percymeneses08.github.io/Movie.es/">https://percymeneses08.github.io/Movie.es/</a></small></p>
-          <p class="project-description">En este proyecto puse a prueba todos mis conocimientos adquiridos previamente. 
-            Esta vez se me hizo más fácil, no me demoré demasiado, en especial, con el maquetado que realicé con ayuda de
-            CSS Grid, y el Responsive Design.</p>
-          </div>
-          <figure class="project-image-container">
-            <img class="project-image theater" src="images/theater-images/proyectoTheater.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
           </figure>
         </article>
         <!-- <article class="project peso">
