updating url of hackspace-badges

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <article class="project Hackspace-badge">
           <div class="project-details">
           <h3 class="project-title">Hackspace Badges</h3>
-          <h6 class="project-course">HTML / CSS / JS / ReactJs / React Router</h6>
+          <h6 class="project-course">HTML / CSS / JS / Sass / ReactJs / React Router / Firebase</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 01/11/19</small></p>
-          <p class="project-url"><small><strong>Puedes ver el código en: </strong><a href="https://github.com/percymeneses08/hackspace-files">https://github.com/percymeneses08/hackspace-files</a></small></p>
+          <p class="project-url"><small><strong>Puedes ver el código en: </strong><a href="https://percymeneses08.github.io/hackspace-badges-firebase/">https://percymeneses08.github.io/hackspace-badges-firebase/</a></small></p>
           <p class="project-description">
-            En este proyecto puedes crear tu badge con tus datos, para que cuando otras personas te busquen sea mucho más rápido pues,
-            el cuadro de búsqueda también filtra los resultados. Por el momento no está desplegado por falta de tiempo.
+            En este proyecto puedes crear un badge con tus datos, para que cuando otras personas te busquen sea mucho más rápido ya que
+            el cuadro de búsqueda también filtra los resultados.
           </p>
           </div>
           <figure class="project-image-container">
