--- a/vr/index.html
+++ b/vr/index.html
@@ -78,7 +78,7 @@
   <h1 class="title">Welcome to the new MeetUp world</h1>
   <div class="container">
     <img class="image" src="../images/vr/virtual-reality.png" alt="virtual-reality" />
-    <a href="https://hub.link/SKzTdRx" target="_blank" class="button">Experiméntalo</a>
+    <a href="https://hub.link/ucyFnJt" target="_blank" class="button">Experiméntalo</a>
     <img class="image" src="../images/vr/smiley.png" alt="smiley face" />
   </div>
 </body>
