--- a/vr/index.html
+++ b/vr/index.html
@@ -93,6 +93,7 @@
     .room-image-figure {
       display: flex;
       width: 100%;
+      height: 77%;
       border-radius: 30px;
       overflow: hidden;
       margin: 0;
@@ -101,6 +102,8 @@
 
     .room-image-figure > img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     .footer {
@@ -108,6 +111,7 @@
         flex-direction: column;
         align-items: center;
         margin-top: 16px;
+        margin-bottom: 64px;
       }
 
     @media screen and (max-width: 1024px) {
@@ -139,25 +143,25 @@
       <figure class="room-image-figure">
         <img src="../images/vr/room.JPG" alt="">
       </figure>
-      <a class="button" href="https://hub.link/zybhgWx" target="_blank">Try it...!</a>
+      <a class="button" href="https://hub.link/zybhgWx" target="_blank">Sala 1</a>
+    </div>
+    <div class="room-container">
+      <figure class="room-image-figure">
+        <img src="../images/vr/room-2.JPG" alt="">
+      </figure>
+      <a class="button" href="https://hub.link/s8Gmsox" target="_blank">Sala 2</a>
+    </div>
+    <div class="room-container">
+      <figure class="room-image-figure">
+        <img src="../images/vr/hackspace-room.png" alt="">
+      </figure>
+      <a class="button" href="https://hub.link/SKzTdRx">Sala 3</a>
     </div>
     <div class="room-container">
       <figure class="room-image-figure">
         <img src="../images/vr/room.JPG" alt="">
       </figure>
-      <a class="button" href="https://hub.link/s8Gmsox" target="_blank">Try it...!</a>
-    </div>
-    <div class="room-container">
-      <figure class="room-image-figure">
-        <img src="../images/vr/room.JPG" alt="">
-      </figure>
-      <a class="button" href="/">Try it...!</a>
-    </div>
-    <div class="room-container">
-      <figure class="room-image-figure">
-        <img src="../images/vr/room.JPG" alt="">
-      </figure>
-      <a class="button" href="/">Try it...!</a>
+      <a class="button" href="/">Sala 4</a>
     </div>
   </div>
 
