image iphone test

--- a/vr/index.html
+++ b/vr/index.html
@@ -68,6 +68,11 @@
       background-color: #48a7e6;
     }
 
+    .icon-container {
+      display: flex;
+      margin: 0;
+    }
+
     .image {
       width: 7rem;
       height: min-content;
@@ -133,9 +138,13 @@
 <body>
   <h1 class="title">Welcome to the Blockchain 3D room</h1>
   <div class="container">
-    <img class="image" src="../images/vr/virtual-reality.png" alt="virtual-reality" />
+    <figure class="icon-container">
+      <img class="image" src="../images/vr/virtual-reality.png" alt="virtual-reality" />
+    </figure>
     <h2 href="https://hub.link/ucyFnJt" target="_blank" class="title">Enjoy your trip!</h2>
-    <img class="image" src="../images/vr/blockchain.png" alt="smiley face" />
+    <figure class="icon-container">
+      <img class="image" src="../images/vr/blockchain.png" alt="smiley face" />
+    </figure>
   </div>
 
   <div class="container-rooms">
