--- a/dotSama-adventure/index.html
+++ b/dotSama-adventure/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
   <figure class="main-isologo"><img src="./src/images/sponsors-images/polkadot-kusama.jpg" alt=""></figure>
@@ -29,9 +29,9 @@
     </div>
     <div class="room-container">
       <figure class="room-image-figure">
-        <img src="./src/images/room-2.JPG" alt="">
+        <img src="./src/images/salastars.JPG" alt="">
       </figure>
-      <a class="button" href="https://hub.link/s8Gmsox" target="_blank">Sala 2</a>
+      <a class="button" href="https://hub.link/oSy3BWt" target="_blank">Sala 2</a>
     </div>
     <div class="room-container">
       <figure class="room-image-figure">
