--- a/paybot/index.html
+++ b/paybot/index.html
@@ -19,7 +19,12 @@
         <br /><br />
         Los usuarios deben realizar el depósito en una cuenta para poder contar con fondos dentro del ecosistema de PayBot.
       </p>
-      <a class="whatsapp-button" href="http://percymeneses08.com">Ir con PayBot</a>
+      <div class="bot-whatsapp">
+        <img class="whatsapp-qr" src="./src/images/whatsapp-qr.jpg" alt="whatsapp-qr">
+        <a class="whatsapp-button" href="https://wa.me/+51971442268">
+          <p class="whatsapp-button_text">Ir con PayBot</p>
+        </a>
+      </div>
     </div>
     <div>
       <figure class="main-image-figure">
